tests/ui/parser/issues/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.stderr
error: struct is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:20:5
   |
LL |     struct BadS;
   |     ^^^^^^^^^^^^
   |
   = help: consider moving the struct out to a nearby module scope

error: enum is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:5:9
   |
LL |         enum BadE {}
   |         ^^^^^^^^^
...
LL |     expand_to_enum!();
   |     ----------------- in this macro invocation
   |
   = help: consider moving the enum out to a nearby module scope
   = note: this error originates in the macro `expand_to_enum` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:31:5
   |
LL |     struct BadS;
   |     ^^^^^^^^^^^^
   |
   = help: consider moving the struct out to a nearby module scope

error: enum is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:5:9
   |
LL |         enum BadE {}
   |         ^^^^^^^^^
...
LL |     expand_to_enum!();
   |     ----------------- in this macro invocation
   |
   = help: consider moving the enum out to a nearby module scope
   = note: this error originates in the macro `expand_to_enum` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct is not supported in `extern` blocks
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:42:5
   |
LL |     struct BadS;
   |     ^^^^^^^^^^^^
   |
   = help: consider moving the struct out to a nearby module scope

error: enum is not supported in `extern` blocks
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:5:9
   |
LL |         enum BadE {}
   |         ^^^^^^^^^
...
LL |     expand_to_enum!();
   |     ----------------- in this macro invocation
   |
   = help: consider moving the enum out to a nearby module scope
   = note: this error originates in the macro `expand_to_enum` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 6 previous errors

